sfdx-source/SmartVisca/main/default/objects/NameCardSettingValues__c/NameCardSettingValues__c.object-meta.xml
<CustomObject>
    <label>名刺設定値</label>
    <nameField>
        <displayFormat>NCSV-{00000}</displayFormat>
        <label>名刺設定値名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>