sfdx-source/SmartVisca/main/default/objects/NameCardSettingValues__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>並び順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>