sfdx-source/SmartVisca/main/default/objects/NameCardSettingValues__c/fields/TextValue01__c.field-meta.xml
<CustomField>
    <fullName>TextValue01__c</fullName>
    <label>テキスト値01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>